--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,7 +2,7 @@
   font-family: Lato;
   font-weight: 500;
   font-style: normal;
-  src: url("/fonts/Lato/Lato-Black.ttf") format("truetype");
+  src: url("/fonts/Lato/Lato-Regular.ttf") format("truetype");
 }
 
 @font-face {
@@ -16,6 +16,6 @@
   font-family: Lato;
   font-weight: 400;
   font-style: normal;
-  src: url("/fonts/Lato/Lato-Black.ttf") format("truetype");
+  src: url("/fonts/Lato/Lato-Regular.ttf") format("truetype");
 }
 
