--- a/css/global.css
+++ b/css/global.css
@@ -10,13 +10,7 @@ body {
   font-family: Lato;
   font-size: 18px;
   font-weight: 400;
-  line-height: 1.2rem;
-}
-
-.wrapper {
-  max-width: 1920px;
-  height: 100vh;
-  margin: 0 auto;
+  line-height: 21.6px;
 }
 
 .container {
@@ -43,4 +37,10 @@ body {
 .fourth-section {
   background-color: var(--purple);
   height: 1185px;
+}
+
+.wrapper {
+  max-width: 1920px;
+  height: 100%;
+  margin: 0 auto;
 }
